# wachen

./: .gitignore  CLAUDE.md  Makefile  README.md  TODOS.md  瓦城顧客體驗中台.html
admin/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
analyzer/: Dockerfile  pyproject.toml  worker.py
analyzer/pipeline/: __init__.py  gemini.py  heuristic.py  risk.py
analyzer/prompts/: v1.txt  v2.txt
analyzer/tests/: test_gemini_call.py  test_gemini_parse.py  test_heuristic.py  test_input_hash.py  test_poison_fallback.py  test_risk.py  test_risk_gating.py
backend/: Dockerfile  go.mod  go.sum
crawler/: Dockerfile  go.mod  go.sum
deploy/: .env.example  docker-compose.yml
docs/: ARCHITECTURE.md  DB_MIGRATION.md  SOURCES.md  google-setup.md
migrations/: 000001_audit_foundation.down.sql  000001_audit_foundation.up.sql  000002_users_sources_raw.down.sql  000002_users_sources_raw.up.sql  000003_reviews_analysis.down.sql  000003_reviews_analysis.up.sql  000004_cases_replies_notifications.down.sql  000004_cases_replies_notifications.up.sql  000005_grants_and_seed.down.sql  000005_grants_and_seed.up.sql  000006_seed_mock_sources.down.sql  000006_seed_mock_sources.up.sql  000007_review_versioning_stores.down.sql  000007_review_versioning_stores.up.sql  000008_reviews_upsert_webhook.down.sql  000008_reviews_upsert_webhook.up.sql  000009_dedupe_semantics_quarantine.down.sql  000009_dedupe_semantics_quarantine.up.sql  000010_routing.down.sql  000010_routing.up.sql  000011_admin_login.down.sql  000011_admin_login.up.sql  000012_enable_reply.down.sql  (+3 more)
(+172 files in other folders)
